NIO implementation